# bevfusion_ros_inference

./: CMakeLists.txt  LICENSE  README.md  package.xml
msg/: CustomDetection3D.msg  CustomDetection3DArray.msg
scripts/: bevfusion_onnx_node.py  publish_data.py
